# esdg-opencl

./: README.md
clover/: CMakeLists.txt
clover/cmake/modules/: FindClang.cmake  FindLLVM.cmake
clover/src/: CMakeLists.txt
clover/src/api/: api_command.cpp  api_context.cpp  api_device.cpp  api_enqueue.cpp  api_event.cpp  api_flush.cpp  api_gl.cpp  api_kernel.cpp  api_memory.cpp  api_platform.cpp  api_program.cpp
clover/src/core/: commandqueue.cpp  commandqueue.h  compiler.cpp  compiler.h  context.cpp  context.h  deviceinterface.h  embedded_data.cpp  embedded_data.h  events.cpp  events.h  kernel.cpp  kernel.h  memobject.cpp  memobject.h  object.cpp  object.h  program.cpp  program.h
clover/src/core/devices/LE1/: .LE1device.cpp.swp  LE1DataPrinter.cpp  LE1DataPrinter.h  LE1DualDevice.h  LE1NDRange.cpp  LE1NDRange.h  LE1QuadDevice.h  LE1ScalarDevice.h  LE1Simulator.cpp  LE1Simulator.h  LE1TriDevice.h  LE1WorkitemCoarsen.cpp  LE1WorkitemCoarsen.h  LE1buffer.cpp  LE1buffer.h  LE1device.cpp  LE1device.h  LE1kernel.cpp  LE1kernel.h  LE1program.cpp  LE1program.h  LE1sampler.cpp  LE1worker.cpp  builtins.h
clover/src/core/devices/LE1/coarsener/: SourceRewriter.cpp  SourceRewriter.h  StmtFixers.cpp  StmtFixers.h
clover/src/core/devices/LE1/creduce/: SimpleInliner.cpp  Transformation.cpp  Transformation.h  TransformationManager.cpp  TransformationManager.h
clover/src/core/devices/cpu/: builtins.cpp  builtins.h  program.cpp  sampler.cpp
clover/src/runtime/: embed.py
install-dir/include/: opcodes.txt
install-dir/include/insizzle/: functions.h  galaxy.h  galaxyConfig.h  global.h  stubs.h  vtapi.h  xmlRead.h
install-dir/lib/: builtins.bc  libc.bc
install-dir/machines/: 10Context_2wide_v.xml  16C_1w_16b.xml  16C_1w_2b.xml  16C_1w_4b.xml  16C_1w_8b.xml  16C_2w_1ls_16b.xml  16C_2w_1ls_2b.xml  16C_2w_1ls_4b.xml  16C_2w_1ls_8b.xml  16C_2w_2ls_1b.xml  16C_2w_2ls_2b.xml  16C_3w_1ls_16b.xml  16C_3w_1ls_1b.xml  16C_3w_1ls_2b.xml  16C_3w_1ls_4b.xml  16C_3w_1ls_8b.xml  16C_3w_2ls_1b.xml  16C_3w_2ls_2b.xml  16C_4w_1ls_16b.xml  16C_4w_1ls_1b.xml  16C_4w_1ls_2b.xml  16C_4w_1ls_4b.xml  16C_4w_1ls_8b.xml  16C_4w_2ls_16b.xml  16C_4w_2ls_1b.xml  16C_4w_2ls_2b.xml  16C_4w_2ls_8b.xml  16Context_1wide.xml  16Context_2w2a2m2ls1b.xml  16Context_2wide.xml  1C_2w_2ls_1b.xml  1C_2w_2ls_2b.xml  1C_3w_1ls_1b.xml  1C_3w_2ls_1b.xml  1C_3w_2ls_2b.xml  1C_4w_1ls_1b.xml  1C_4w_2ls_2b.xml  1C_4w_2m_2ls_2b.xml  1C_4w_4ls_2b.xml  1C_4w_4ls_4b.xml  (+80 more)
install-dir/machines/1-core/: 1w_1a_1m_1ls_1b.xml  2w_1a_1m_1ls_1b.xml  2w_1a_1m_2ls_1b.xml  2w_1a_1m_2ls_2b.xml  2w_1a_2m_1ls_1b.xml  2w_1a_2m_2ls_1b.xml  2w_1a_2m_2ls_2b.xml  2w_2a_1m_1ls_1b.xml  2w_2a_1m_2ls_1b.xml  2w_2a_1m_2ls_2b.xml  2w_2a_2m_1ls_1b.xml  2w_2a_2m_2ls_1b.xml  2w_2a_2m_2ls_2b.xml  4w_2a_1m_1ls_1b.xml  4w_2a_1m_2ls_1b.xml  4w_2a_1m_2ls_2b.xml  4w_2a_1m_3ls_1b.xml  4w_2a_1m_3ls_2b.xml  4w_2a_1m_4ls_1b.xml  4w_2a_1m_4ls_2b.xml  4w_2a_1m_4ls_4b.xml  4w_2a_2m_1ls_1b.xml  4w_2a_2m_2ls_1b.xml  4w_2a_2m_2ls_2b.xml  4w_2a_2m_3ls_1b.xml  4w_2a_2m_3ls_2b.xml  4w_2a_2m_4ls_1b.xml  4w_2a_2m_4ls_2b.xml  4w_2a_2m_4ls_4b.xml  4w_2a_3m_1ls_1b.xml  4w_2a_3m_2ls_1b.xml  4w_2a_3m_2ls_2b.xml  4w_2a_3m_3ls_1b.xml  4w_2a_3m_3ls_2b.xml  4w_2a_3m_4ls_1b.xml  4w_2a_3m_4ls_2b.xml  4w_2a_3m_4ls_4b.xml  4w_2a_4m_1ls_1b.xml  4w_2a_4m_2ls_1b.xml  4w_2a_4m_2ls_2b.xml  (+69 more)
install-dir/machines/2-core/: 1w_1a_1m_1ls_1b.xml  1w_1a_1m_1ls_2b.xml  (+164 more)
install-dir/scripts/: llvmTransform.pl  secondpass.pl
libclc/: .gitignore  Makefile  configure.py
libclc/utils/: prepare-builtins.cpp  prepare-builtins.o.d
llvm-3.2/: CMakeLists.txt  configure
llvm-3.4/: CMakeLists.txt
scripts/: compile-complete.sh  create-dram.c  create-dram.pl  create-target.pl  generate-targets.py  merge.sh  simulate.sh
superblocks/: Makefile.common  config.status  configure
superblocks/TEST/: Makefile  prog.c
superblocks/autoconf/: aclocal.m4  configure.ac  configure.bak
superblocks/include/: SuperBlock.h
superblocks/lib/: Makefile
superblocks/tools/: Makefile
testing/: .gitignore
testing/address-spaces/: build.sh  compile-complete.sh  example.c  hello-opencl.c  kernel.bc  square.cl
testing/benchmarks/: finish-benchmarks.sh  run-fp  run-integer
testing/create-workgroup/: Makefile  Makefile.in  assemble.sh  ast.sh  compile-complete.sh  compile.sh  create-main.sh  kernel.bc  launcher.bc  le1.s.tran  main.c  vector.s.tran  vector_mult.cl  vector_mult.s  vector_mult.s.tran
testing/data/: clang.s  data.c  le1.s  le1.s.tran
testing/fp/: run-benchmarks
testing/integer/: integer-benchmarks  run-benchmarks
testing/isel/: bitonic.c  error  nandl.ps  newlib.bc  norl.ps  orl.ps  test.c
testing/pocl-regression/: Makefile  barrier.c  test_multi_level_loops_with_barriers.cpp
tools/: BlockWeights.cpp  ConfigTarget.cpp
tools/WorkitemCoarsen/: Makefile  WorkitemCoarsen.cpp  WorkitemCoarsen.h
tools/ast/: Makefile  dump-ast.sh  idea  kernel.cl  kernel.xml  kernel_loop.cl  rewritersample.cpp  test.ast  test.c
tools/preprocessor/: Makefile  build.sh  main.cpp  test.cpp  vector_mult.cl
(+1260 files in other folders)
